--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ img {
   text-align: center;
   max-width: 1600px;
   height: 600px;
+  margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
   background-image: linear-gradient(
@@ -310,8 +311,10 @@ img {
   bottom: 0;
   width: 100%;
   height: 70px;
-  padding: 27px 0;
   background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Team */
@@ -518,6 +521,7 @@ img {
 }
 
 .button-primary {
+  cursor: pointer;
   color: var(--primary-text-color);
   background-color: var(--portfolio-button-bgr);
   border-radius: 4px;
@@ -534,7 +538,7 @@ img {
   padding-left: 22px;
   padding-right: 22px;
   height: 38px;
-  transition-property: color, background-color, cursor, box-shadow;
+  transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -548,7 +552,6 @@ img {
 .button-list .button-primary:focus {
   color: var(--hero-text-color);
   background-color: var(--accent-color);
-  cursor: pointer;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -647,7 +650,8 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.work-link:hover .thumb-work-text {
+.work-link:hover .thumb-work-text,
+.work-link:focus .thumb-work-text {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
@@ -731,7 +735,7 @@ img {
   justify-content: center;
   align-items: center;
   fill: var(--social-icons-fill);
-  transition-property: fill, border;
+  transition-property: fill, border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -739,7 +743,7 @@ img {
 .clients-link:hover,
 .clients-link:focus {
   fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 /* Icons Footer */
